--- a/index.ipynb
+++ b/index.ipynb
@@ -35,18 +35,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State you null and alternative hypotheses\n"
+    "# State you null and alternative hypotheses\n",
+    "# H0: X ≤ mu \n",
+    "# HA: X > mu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.0, 0.0013498980316301035)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your solution here\n",
+    "import scipy.stats as stats\n",
+    "from math import sqrt\n",
+    "x_bar = 75\n",
+    "n = 36 # number of students\n",
+    "sigma = 30 # sd of population\n",
+    "mu = 60 # Population mean \n",
+    "\n",
+    "z = (x_bar - mu)/(sigma/sqrt(n))\n",
+    "p = 1 - stats.norm.cdf(z)\n",
+    "\n",
+    "# a distribution of sampling means of n=36 has N(60, 30/6), so z score of 3,\n",
+    "# means that x_bar is 3 standard deviations away from the mean!!!! (75 = 60 + 3(5))\n",
     "\n",
     "\n",
+    "\n",
+    "z, p\n",
     "# (p = 0.0013498980316301035, z = 3.0)"
    ]
   },
@@ -57,7 +84,8 @@
    "outputs": [],
    "source": [
     "# Interpret the results in terms of p-value obtained\n",
-    "\n"
+    "\n",
+    "# because 0.0013 < 0.05, we reject the null hypothesis!! we contradict the company's claim.\n"
    ]
   },
   {
@@ -89,19 +117,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State your hypotheses \n"
+    "# State your hypotheses \n",
+    "# H0: X ≤ mu \n",
+    "# HA: X > mu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.8, 0.03593031911292577)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Give your solution here \n",
+    "scores = [434, 694, 457, 534, 720, 400, 484, 478, 610, 641, 425, 636, 454,\n",
+    "514, 563, 370, 499, 640, 501, 625, 612, 471, 598, 509, 531]\n",
+    "x_bar = sum(scores)/len(scores)\n",
+    "n = len(scores)\n",
+    "sigma = 100\n",
+    "mu = 500\n",
     "\n",
+    "z = (x_bar - mu)/(sigma/sqrt(n))\n",
+    "p = 1 - stats.norm.cdf(z)\n",
     "\n",
-    "\n",
+    "z, p\n",
     "# p = 0.03593031911292577, z = 1.8"
    ]
   },
@@ -111,7 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret the results in terms of p-value obtained\n"
+    "# Interpret the results in terms of p-value obtained\n",
+    "# reject the null hyp!!!! "
    ]
   },
   {
@@ -147,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
